--- a/app/static/views/home/home.html
+++ b/app/static/views/home/home.html
@@ -3,42 +3,81 @@
 
         <div class="col-md-4">
 
-            <form class="form-horizontal" role="form">
-                <div class="form-group">
-                    <label class="control-label col-sm-3" for="inputTag">Tag</label>
-
-                    <div class="col-sm-9">
-                        <tags-input ng-model="newTodoTags" type="text" id="inputTag">
-                        </tags-input>
-                    </div>
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <form class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <div class="col-sm-9">
+                                <tags-input ng-model="newTodoTags" type="text" id="inputTag" placeholder="Label your todo">
+                                </tags-input>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-9">
+                                <input ng-model="newTodoText" type="text" class="form-control" id="inputText" placeholder="What do you need to do?">
+                            </div>
+                        </div>
+                        <button class="btn btn-default pull-right hidden" ng-click="addTodo()">Add</button>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-3" for="inputText">Todo</label>
-
-                    <div class="col-sm-9">
-                        <input ng-model="newTodoText" type="text" class="form-control" id="inputText">
-                    </div>
-                </div>
-
-                <button class="btn btn-default pull-right" ng-click="addTodo()">Add</button>
-            </form>
-
-            <h4>
-                All tags
-            </h4>
-
-            <div class="tags-list">
-                <li ng-repeat="tag in allTags track by $index" class="tag-item">{{ tag.text }}</li>
             </div>
+
+            <!-- FILTER panel -->
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4>Filter</h4>
+                </div>
+                <div class="panel-body">
+                    {{ allTags }}
+
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <button type="button" class="btn btn-default" ng-click="selectAllTags()">
+                                Select All
+                            </button>
+                            <button type="button" class="btn btn-default" ng-click="deselectAllTags()">
+                                Deselect All
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <div class="tags-list">
+                                <ul>
+                                    <li ng-repeat="tag in allTags track by $index"
+                                        class="tag-item" ng-click="toggleSelectTag(tag)"
+                                        ng-style="{ 'background-color': tag.selected ? '' : '#88A8BB' }">
+                                        {{ tag.text }}
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End FILTER panel -->
 
         </div>
 
         <div class="col-md-8">
+            <!-- List of TODOs -->
             <ul class="list-group">
-                <li ng-repeat="item in todos" class="list-group-item todo-body">
-                    {{ item.text }}
-                    <div class="tags-list">
-                        <span ng-repeat="tag in item.tags" class="tag-item">{{ tag.text }}</span>
+                <li ng-repeat="todo in todos | showSelectedOnly:selectedTags"
+                    ng-class="{disabled: todo.isDone}"
+                    class="list-group-item todo-body">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <input type="checkbox" ng-model="todo.isDone"/>
+                            <span class="done-{{todo.isDone}} lead">{{todo.text}}</span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="tags-list">
+                                <!-- Tags within a single to-do -->
+                                <span ng-repeat="tag in todo.tags" class="tag-item">{{ tag.text }}</span>
+                            </div>
+                        </div>
                     </div>
                 </li>
             </ul>
