--- a/app/static/views/home/home.html
+++ b/app/static/views/home/home.html
@@ -45,7 +45,7 @@
                         <div class="col-xs-12">
                             <div class="tags-list">
                                 <ul>
-                                    <li ng-repeat="tag in allTags track by $index"
+                                    <li ng-repeat="tag in allTags.objects track by $index"
                                         class="tag-item" ng-click="toggleSelectTag(tag)"
                                         ng-style="{ 'background-color': tag.selected ? '' : '#88A8BB' }">
                                         {{ tag.text }}
@@ -63,13 +63,13 @@
         <div class="col-md-8">
             <!-- List of TODOs -->
             <ul class="list-group">
-                <li ng-repeat="todo in todos | showSelectedOnly:selectedTags"
-                    ng-class="{disabled: todo.isDone}"
+                <li ng-repeat="todo in todos.objects | showSelectedOnly:selectedTags"
+                    ng-class="{disabled: todo.done}"
                     class="list-group-item todo-body">
                     <div class="row">
                         <div class="col-xs-12">
                             <input type="checkbox" ng-model="todo.isDone"/>
-                            <span class="done-{{todo.isDone}} lead">{{todo.text}}</span>
+                            <span class="done-{{todo.done}} lead">{{todo.text}}</span>
                         </div>
                     </div>
                     <div class="row">
