--- a/app/static/views/home/home.html
+++ b/app/static/views/home/home.html
@@ -7,13 +7,14 @@
                     <form class="form-horizontal" role="form">
                         <div class="form-group">
                             <div class="col-sm-9">
-                                <tags-input ng-model="newTodoTags" type="text" id="inputTag" placeholder="Label your todo">
+                                <tags-input ng-model="todo.tags" type="text" id="inputTag" placeholder="Label your todo">
+                                    <auto-complete source="loadTags($query)"></auto-complete>
                                 </tags-input>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-sm-9">
-                                <input ng-model="newTodoText" type="text" class="form-control" id="inputText" placeholder="What do you need to do?">
+                                <input ng-model="todo.text" type="text" class="form-control" id="inputText" placeholder="What do you need to do?">
                             </div>
                         </div>
                         <button class="btn btn-default pull-right hidden" ng-click="addTodo()">Add</button>
@@ -25,7 +26,6 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <b>Filter</b>
-                    {{ todos }}
                 </div>
                 <div class="panel-body">
                     <div class="row">
@@ -45,7 +45,7 @@
                         <div class="col-xs-12">
                             <div class="tags-list">
                                 <ul>
-                                    <li ng-repeat="tag in allTags.objects track by $index"
+                                    <li ng-repeat="tag in allTags track by $index"
                                         class="tag-item" ng-click="toggleSelectTag(tag)"
                                         ng-style="{ 'background-color': tag.selected ? '' : '#88A8BB' }">
                                         {{ tag.text }}
@@ -63,13 +63,13 @@
         <div class="col-md-8">
             <!-- List of TODOs -->
             <ul class="list-group">
-                <li ng-repeat="todo in todos.objects | showSelectedOnly:selectedTags"
+                <li ng-repeat="todo in todos | showSelectedOnly:selectedTags"
                     ng-class="{disabled: todo.done}"
                     class="list-group-item todo-body">
                     <div class="row">
                         <div class="col-xs-12">
-                            <input type="checkbox" ng-model="todo.isDone"/>
-                            <span class="done-{{todo.done}} lead">{{todo.text}}</span>
+                            <input type="checkbox" ng-model="todo.done"/>
+                            <span class="done-{{todo.done}} lead">{{todo.text}} -- Done:{{ todo.done }}, Archived: {{ todo.archived }}</span>
                         </div>
                     </div>
                     <div class="row">
@@ -82,6 +82,10 @@
                     </div>
                 </li>
             </ul>
+            <!-- End of TODOs list -->
+            <a ng-click="archiveTodos()">
+                Archive Complete
+            </a>
         </div>
 
 
