--- a/app/static/views/home/home.html
+++ b/app/static/views/home/home.html
@@ -1,3 +1,4 @@
+    <h1 id="doit-header" class="page-header">Doit <small>Quick and simple task management</small></h1>
     <div class="row">
 
         <div class="col-md-4">
@@ -6,14 +7,14 @@
                 <div class="panel-body">
                     <form class="form-horizontal" role="form">
                         <div class="form-group">
-                            <div class="col-sm-9">
+                            <div class="col-xs-12">
                                 <tags-input ng-model="todo.tags" type="text" id="inputTag" placeholder="Label your todo">
                                     <auto-complete source="loadTags($query)"></auto-complete>
                                 </tags-input>
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-sm-9">
+                            <div class="col-xs-12">
                                 <input ng-model="todo.text" type="text" class="form-control" id="inputText" placeholder="What do you need to do?">
                             </div>
                         </div>
