--- a/app/static/views/home/home.html
+++ b/app/static/views/home/home.html
@@ -1,4 +1,4 @@
-    <h1 id="doit-header" class="page-header">Doit <small>Quick and simple task management</small></h1>
+    <h1 id="doit-header" class="page-header">Doit <small>Quick and simple personal task management</small></h1>
     <div class="row">
 
         <div class="col-md-4">
