--- a/app/static/views/home/home.html
+++ b/app/static/views/home/home.html
@@ -71,14 +71,18 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-xs-8">
                             <div class="tags-list">
                                 <!-- Tags within a single to-do -->
                                 <span ng-repeat="tag in todo.tags" class="tag-item">{{ tag.text }}</span>
                             </div>
                         </div>
+                        <div class="col-xs-4">
+                            <small class="pull-right text-muted">NOW</small>
+                        </div>
                     </div>
                 </li>
+                <!-- TODO: Should be a directive -->
                 <li ng-repeat="todo in todos track by $index | orderBy:'!created' | showSelectedOnly:selectedTags"
                     ng-class="{disabled: todo.done}"
                     class="list-group-item todo-body">
@@ -86,15 +90,17 @@
                         <div class="col-xs-12">
                             <input type="checkbox" ng-model="todo.done"/>
                             <span class="done-{{todo.done}} lead">{{todo.text}}</span><br/>
-                            <small>{{ todo.created }}</small>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-xs-8">
                             <div class="tags-list">
                                 <!-- Tags within a single to-do -->
                                 <span ng-repeat="tag in todo.tags" class="tag-item">{{ tag.text }}</span>
                             </div>
+                        </div>
+                        <div class="col-xs-4">
+                            <small class="pull-right text-muted">{{ todo.created | date:'short' }}</small>
                         </div>
                     </div>
                 </li>
