--- a/app/static/views/home/home.html
+++ b/app/static/views/home/home.html
@@ -12,6 +12,9 @@
             <button ng-click="archiveTodos()" type="button" class="btn btn-default" tooltip-placement="left" tooltip="Archive Complete">
                 <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
             </button>
+            <button type="button" class="btn btn-default">
+                Statistics
+            </button>
         </div>
     </div>
 </div>
@@ -155,13 +158,16 @@
                         <span class="done-{{todo.done}} lead">{{todo.text}}</span><br/>
                     </div>
                     <div class="col-xs-4">
-                        <button class="btn btn-default pull-right"
-                                type="button" tooltip-placement="left"
-                                tooltip="Start Pomodoro"
-                                ng-click="pomodoro.startPomo(todo)">
-                            <span class="label label-default">{{ todo.pomodoros.length }}</span>
-                            <span class="glyphicon glyphicon-play"></span>
-                        </button>
+                        <div class="btn-group pull-right">
+                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                Action <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu">
+                                <li ng-click="pomodoro.startPomo(todo)"><a>Start Pomo</a></li>
+                                <li class="divider"></li>
+                                <li ng-click="deleteTodo(todo)"><a href="#">Delete Todo</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
