--- a/app/static/views/home/home.html
+++ b/app/static/views/home/home.html
@@ -1,6 +1,6 @@
 <div id="doit-topbar" class="row">
     <div class="col-xs-3">
-        <h1 id="doit-header">Doit</h1>
+        <h1 id="doit-header">DoIt</h1>
     </div>
     <div class="col-xs-5 col-xs-offset-1">
         <div class="doit-controls-top">
@@ -83,13 +83,13 @@
     <div class="col-xs-8">
 
         <!-- Pomodoro panel (only shows if pomodoro is running) -->
-        <div class="panel panel-default" ng-show="pomodoro.pomoRunning">
+        <div class="panel panel-default" ng-show="pomodoro.pomoState == 'running' || pomodoro.pomoState == 'finished'">
             <div class="panel-body">
                 <div class="row">
                     <div class="col-sm-8">
                         <p class="lead">
-                            <span ng-show="pomodoro.showPomoSubmit"><strong>Pomodoro Complete!</strong></span>
-                            <span ng-hide="pomodoro.showPomoSubmit">Running Pomodoro...</span>
+                            <span ng-show="pomodoro.pomoState == 'finished'"><strong>Pomodoro Complete!</strong></span>
+                            <span ng-show="pomodoro.pomoState == 'running'">Running Pomodoro...</span>
                             <br/><small><em>{{ pomodoro.activePomoTodo.text }}</em></small>
                         </p>
                     </div>
@@ -99,7 +99,7 @@
                                     class="btn btn-success"
                                     tooltip="Submit Pomodoro"
                                     tooltip-placement="left"
-                                    ng-show="pomodoro.showPomoSubmit"
+                                    ng-show="pomodoro.pomoState == 'finished'"
                                     ng-click="pomodoro.submitPomo()">
                                 Submit
                             </button>
@@ -115,14 +115,11 @@
                 </div>
                 <timer interval="1000" autostart="false" countdown="2" finish-callback="pomodoro.pomoFinished()">
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped active" role="progressbar" style="width: {{ ((millis/1000)/2) * 100}}%">
+                        <div class="progress-bar progress-bar-striped progress-bar-danger active" role="progressbar" style="width: {{ ((millis/1000)/2) * 100}}%">
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-6">
-                            You've completed {{ pomodoro.activePomoTodo.pomodoros.length }} pomodoros for this task.
-                        </div>
-                        <div class="col-xs-6">
+                        <div class="col-xs-12">
                             <p class="text-muted pull-right">
                                 <em>
                                     {{ minutes }} minute{{ minutesS }} and {{ seconds }} second{{ secondsS }} remain.
@@ -136,7 +133,46 @@
         <!-- End of Pomodoro panel -->
 
         <!-- BREAK Panel - shows during the five minute break between each pomodoro -->
+        <div class="panel panel-default" ng-if="pomodoro.pomoState == 'break' || pomodoro.pomoState == 'break-finished'">
+            <div class="panel-body">
+                <div class="row">
+                    <div class="col-xs-7">
+                        <p class="lead" ng-show="pomodoro.pomoState=='break'">Taking a break. <br/>
+                            <small><em>Have a five minute break before your next Pomodoro.</em></small>
+                        </p>
+                        <p class="lead" ng-show="pomodoro.pomoState=='break-finished'"><strong>Break Over! </strong><br/>
+                            <small><em>It's time to begin another Pomodoro.</em></small>
+                        </p>
+                    </div>
+                    <div class="col-xs-5">
+                        <div class="pull-right">
+                            <button type="button"
+                                    class="btn btn-default"
+                                    tooltip="Submit Pomodoro"
+                                    tooltip-placement="left"
+                                    ng-show="pomodoro.pomoState == 'break-finished'"
+                                    ng-click="pomodoro.startPomo(pomodoro.activePomoTodo)">
+                                <span class="glyphicon glyphicon-refresh"></span> Repeat Previous
+                            </button>
+                            <blockquote ng-show="pomodoro.pomoState == 'break'" style="font-size: 13px;">
+                                <p>
+                                    {{ currentQuote.quote }}
+                                </p>
+                                <footer>{{ currentQuote.by }}</footer>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+                <timer interval="1000" countdown="5" finish-callback="pomodoro.finishBreak()">
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped progress-bar-success active" role="progressbar" style="width: {{ ((millis/1000)/5) * 100}}%">
+                        </div>
+                    </div>
+                    <p class="muted">{{ minutes }} minute{{ minutesS }} and {{ seconds }} second{{ secondsS }} remaining before next Pomodoro.</p>
+                </timer>
+            </div>
 
+        </div>
         <!-- End of Break panel -->
 
         <!-- List of TODOs -->
