--- a/app/static/views/todo/todo.html
+++ b/app/static/views/todo/todo.html
@@ -18,8 +18,8 @@
                     </div>
                     <div class="col-xs-4">
                         <div class="btn-group pull-right">
-                            <button type="button" class="btn btn-default">
-                                Delete <span class="caret"></span>
+                            <button type="button" class="btn btn-default" ng-click="deleteTodo()">
+                                Delete
                             </button>
                         </div>
                     </div>
