--- a/app/static/views/home/home.html
+++ b/app/static/views/home/home.html
@@ -148,8 +148,6 @@
                         <div class="pull-right">
                             <button type="button"
                                     class="btn btn-default"
-                                    tooltip="Submit Pomodoro"
-                                    tooltip-placement="left"
                                     ng-show="pomodoro.pomoState == 'break-finished'"
                                     ng-click="pomodoro.startPomo(pomodoro.activePomoTodo)">
                                 <span class="glyphicon glyphicon-refresh"></span> Repeat Previous
@@ -206,7 +204,7 @@
                     <div class="col-xs-8">
                         <input type="checkbox" ng-model="todo.done"/>
                         <a ng-href="#/todo/{{ todo.id }}" style="color: inherit;">
-                            <span class="done-{{todo.done}} lead" ng-bind-html="todo.text | highlight:todoSearch"></span>{{ todo.deleted }}<br/>
+                            <span class="done-{{todo.done}} lead" ng-bind-html="todo.text | highlight:todoSearch"></span><br/>
                         </a>
                     </div>
                     <div class="col-xs-4">
