Begin work on logins

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" ng-app="todolist">
 <head>
     <meta charset="utf-8">
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="lib/ng-tags-input/ng-tags-input.bootstrap.css">
 </head>
 <body>
+{% block content %}{% endblock %}
 <div class="view-container">
     <div class="container view-frame" ng-view></div>
 </div>
