Reverted to working version - pre user login

--- a/app/static/views/home/home.html
+++ b/app/static/views/home/home.html
@@ -152,7 +152,7 @@
                                     ng-click="pomodoro.startPomo(pomodoro.activePomoTodo)">
                                 <span class="glyphicon glyphicon-refresh"></span> Repeat Previous
                             </button>
-                            <blockquote ng-show="pomodoro.pomoState == 'break'" style="font-size: 13px;">
+                            <blockquote ng-show="pomodoro.pomoState == 'break'">
                                 <p>
                                     {{ currentQuote.quote }}
                                 </p>
