--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -5,6 +5,18 @@ body {
 #doit-topbar {
 }
 
+.btn-google-plus {
+  color: #fff;
+  background-color: #dd4b39;
+  border: 1px solid #d54331;
+}
+
+.btn-google-plus:hover,
+.btn-google-plus:focus {
+  color: #fff;
+  background-color: #cb3927;
+}
+
 .label-large {
     margin-right: 2px;
 }
