--- a/app/static/views/home/home.html
+++ b/app/static/views/home/home.html
@@ -1,8 +1,16 @@
 <div id="doit-topbar" class="row">
-    <div class="col-xs-3">
+    <div class="col-xs-2">
         <h1 id="doit-header">DoIt</h1>
     </div>
-    <div class="col-xs-5 col-xs-offset-1">
+    <div class="col-xs-2">
+        <div class="doit-controls-top">
+            {{ userProfile.displayName }}
+            <button class="btn btn-block btn-google-plus" ui-sref="logout">
+                Logout
+            </button>
+        </div>
+    </div>
+    <div class="col-xs-5">
         <div class="doit-controls-top">
             <input type="text" class="form-control" placeholder="Search" ng-model="todoSearch"/>
         </div>
@@ -12,11 +20,9 @@
             <button ng-click="archiveTodos()" type="button" class="btn btn-default" tooltip-placement="left" tooltip="Archive Complete">
                 <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
             </button>
-            <a ng-href="#stats">
-                <button type="button" class="btn btn-default">
-                    Statistics
-                </button>
-            </a>
+            <button type="button" class="btn btn-default" ui-sref="stats">
+                <span class="fa fa-line-chart"></span>
+            </button>
         </div>
     </div>
 </div>
@@ -150,7 +156,7 @@
                                     class="btn btn-default"
                                     ng-show="pomodoro.pomoState == 'break-finished'"
                                     ng-click="pomodoro.startPomo(pomodoro.activePomoTodo)">
-                                <span class="glyphicon glyphicon-refresh"></span> Repeat Previous
+                                <i class="fa fa-refresh fa-spin"></i> Repeat Previous
                             </button>
                             <blockquote ng-show="pomodoro.pomoState == 'break'">
                                 <p>
@@ -203,7 +209,7 @@
                 <div class="row">
                     <div class="col-xs-8">
                         <input type="checkbox" ng-model="todo.done"/>
-                        <a ng-href="#/todo/{{ todo.id }}" style="color: inherit;">
+                        <a ng-href="#todo/{{ todo.id }}" style="color: inherit;">
                             <span class="done-{{todo.done}} lead" ng-bind-html="todo.text | highlight:todoSearch"></span><br/>
                         </a>
                     </div>
