--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,11 +10,13 @@
     <link href="css/app.css" rel="stylesheet">
     <link rel="stylesheet" href="lib/ng-tags-input/ng-tags-input.min.css"/>
     <link rel="stylesheet" href="lib/ng-tags-input/ng-tags-input.bootstrap.css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
 </head>
 <body>
 {% block content %}{% endblock %}
 <div class="view-container">
-    <div class="container view-frame" ng-view></div>
+    <div class="container view-frame" ui-view></div>
 </div>
 <script src="lib/jquery/dist/jquery.js"></script>
 <script src="lib/jquery-ui/jquery-ui.js"></script>
@@ -23,7 +25,8 @@
 <script src="lib/angular-animate/angular-animate.js"></script>
 <script src="lib/angular-resource/angular-resource.js"></script>
 <script src="lib/angular-sanitize/angular-sanitize.js"></script>
-<script src="lib/angular-route/angular-route.js"></script>
+<script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
+<script src="lib/satellizer/satellizer.js"></script>
 <script src="lib/angular-timer/dist/angular-timer.js"></script>
 <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="lib/showdown/src/showdown.js"></script>
@@ -40,6 +43,9 @@
 <script src="js/home/TodoItem.js"></script>
 <script src="js/home/home-controller.js"></script>
 <script src="js/todo/todo-controller.js"></script>
+<script src="js/users/login_controller.js"></script>
+<script src="js/users/logout_controller.js"></script>
+<script src="js/users/account.js"></script>
 <script src="js/stats/stats-controller.js"></script>
 
 </body>
